--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,5 +2,15 @@
 
 <%= form_with :model => @post do |form| %>
   <%# add form fields %>
+  <p>
+    %= form.label "author"%
+    %= form.text_field "author"%
+  </p>
+<p>
+  <%= form.label "image", "image URL"%>
+  <% form.text_field "image"%>
+</p>
+<p>
+  <% form.label %>
   <%= form.submit %>
 <% end %>
